force-app/main/default/objects/TOBJ_Warning__c/TOBJ_Warning__c.object-meta.xml
<CustomObject>
    <label>Warning</label>
    <nameField>
        <displayFormat>WARN-{00000000}</displayFormat>
        <label>Nome do Aviso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warning</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>