force-app/main/default/objects/TOBJ_Warning__c/fields/ModecSupplierPortalLink__c.field-meta.xml
<CustomField>
    <fullName>ModecSupplierPortalLink__c</fullName>
    <formula>$Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModecSupplierPortalLink</label>
    <type>Text</type>
</CustomField>