force-app/main/default/objects/TOBJ_Warning__c/fields/PublicationDate__c.field-meta.xml
<CustomField>
    <fullName>PublicationDate__c</fullName>
    <label>Data de publicação</label>
    <required>true</required>
    <type>Date</type>
</CustomField>