force-app/main/default/objects/TOBJ_Warning__c/fields/PublicationDateView__c.field-meta.xml
<CustomField>
    <fullName>PublicationDateView__c</fullName>
    <formula>TEXT(MONTH(PublicationDate__c))+&apos;/&apos;+TEXT(DAY(PublicationDate__c))+&apos;/&apos;+TEXT(YEAR(PublicationDate__c))</formula>
    <label>Visualização da data de publicação</label>
    <type>Text</type>
</CustomField>