force-app/main/default/objects/TOBJ_Warning__c/fields/TCF_DueDate__c.field-meta.xml
<CustomField>
    <fullName>TCF_DueDate__c</fullName>
    <label>Data de vencimento</label>
    <type>Date</type>
</CustomField>