force-app/main/default/objects/TOBJ_Warning__c/fields/TCF_Notice__c.field-meta.xml
<CustomField>
    <fullName>TCF_Notice__c</fullName>
    <label>Notícia</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>