force-app/main/default/objects/TOBJ_Warning__c/fields/TCF_RequiresConfirmation__c.field-meta.xml
<CustomField>
    <fullName>TCF_RequiresConfirmation__c</fullName>
    <label>Requer confirmação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>