force-app/main/default/objects/TOBJ_Warning__c/fields/TCF_Subject__c.field-meta.xml
<CustomField>
    <fullName>TCF_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>