force-app/main/default/objects/TOBJ_Warning__c/fields/Total_of_participants__c.field-meta.xml
<CustomField>
    <fullName>Total_of_participants__c</fullName>
    <label>Total de participantes</label>
    <summaryForeignKey>TOBJ_Participants__c.Warning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>