force-app/main/default/objects/TOBJ_Warning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TCF_Subject__c</columns>
    <columns>PublicationDate__c</columns>
    <columns>TCF_DueDate__c</columns>
    <columns>Total_of_participants__c</columns>
    <columns>TCF_RequiresConfirmation__c</columns>
    <columns>TCF_HSEQWarning__c</columns>
    <columns>RequiredSendEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>